--- a/css/style.css
+++ b/css/style.css
@@ -22,3 +22,12 @@ body {
 	flex-wrap:wrap;
 }
 
+header {
+	width: 100%;
+	padding: 50px 0;
+	display: flex;
+	flex-direction:row;
+	justify-content:space-between;
+	align-items:center;
+}
+
