--- a/css/style.css
+++ b/css/style.css
@@ -31,3 +31,10 @@ header {
 	align-items:center;
 }
 
+header .menu a {
+	color: #fff;
+	text-decoration: none;
+	margin-right: 40px;
+	font-size: 18px;
+}
+
