--- a/css/style.css
+++ b/css/style.css
@@ -60,4 +60,17 @@ header .menu a:hover {
 	vertical-align: top;
 }
 
+.main article h2 {
+	margin-bottom: 20px;
+	font-weight: normal;
+	font-size: 32px;
+}
+
+.main article p {
+	margin-bottom: 20px;
+	font-size: 14px;
+	line-height: 27px;
+}
+
+
 
