--- a/css/style.css
+++ b/css/style.css
@@ -72,5 +72,15 @@ header .menu a:hover {
 	line-height: 27px;
 }
 
+aside {
+	width: 30%;
+	background: #537dca;
+	padding: 20px;
+	display: flex;
+	flex-direction:column;
+	flex-wrap:wrap;
+	justify-content:space-between;
+}
+
 
 
