--- a/css/style.css
+++ b/css/style.css
@@ -82,5 +82,16 @@ aside {
 	justify-content:space-between;
 }
 
+aside .ad {
+	font-size: 30px;
+	text-align: center;
+	color: #fff;
+	padding: 50px 0;
+	background: #4264a2;
+	/*margin: 20px 0;*/
+}
+
+
+
 
 
