--- a/css/style.css
+++ b/css/style.css
@@ -91,6 +91,17 @@ aside .ad {
 	/*margin: 20px 0;*/
 }
 
+footer {
+	margin: 20px 0;
+	background: rgba(255,255,255,.2);
+	padding: 20px;
+	width: 100%;
+	color: #fff;
+	display: flex;
+	flex-direction:row;
+	flex-wrap:no-wrap;
+	justify-content:space-between;
+}
 
 
 
