--- a/css/style.css
+++ b/css/style.css
@@ -103,6 +103,16 @@ footer {
 	justify-content:space-between;
 }
 
+footer .redes-sociales a {
+	color: #fff;
+	text-decoration: underline;
+	margin-left: 20px;
+}
+
+footer .redes-sociales a:hover {
+	text-decoration: none;
+}
+
 
 
 
