--- a/css/style.css
+++ b/css/style.css
@@ -128,4 +128,27 @@ footer .redes-sociales a:hover {
 	}
 }
 
+@media screen and (max-width: 600px) {
+	header {
+		flex-direction:column;
+		padding-bottom: 20px;
+	}
+
+	header .menu {
+		width: 100%;
+		background: rgba(255,255,255,.2);
+		text-align: center;
+		padding: 20px;
+	}
+
+	header .menu a {
+		margin: 0 20px;
+	}
+
+	header .logo {
+		margin-bottom: 20px;
+	}
+
+	
+}
 
